--- a/lang/en.json
+++ b/lang/en.json
@@ -148,7 +148,7 @@
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Combat Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RJvdnVN7IZU2NqG1]{Combat Training}",
     "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Foment Dissent}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.WNTHJ26Ri47PNbpy]{Foment Dissent}",
     "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{The Latest News}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1BH6KfEaP7bFsbTn]{The Latest News}",
-    "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
+    "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vRL5isWEUYHYnDLg]{Reputation}",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Research Lore}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
     "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
@@ -156,7 +156,7 @@
     "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
     "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
     "WFRP4eEndeavours.Link.MapRoute": "Map the Route.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Start Mapping the Route}",
-    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
+    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.rxXm0CRRxbTLlgpN]{Practice a Skill}",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
     "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
     "WFRP4eEndeavours.Link.College": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.4k9zO8G9Ay17d6mE]{College Research}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
@@ -188,8 +188,8 @@
     "WFRP4eEndeavours.Link.Shelter": "Find Shelter.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.bIXQJZBEaL5iziDm]{Find Shelter}",
     "WFRP4eEndeavours.Link.ForageforFood": "Forage for Food.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.uwUjherl2lz7eQzJ]{Forage for Food}",
     "WFRP4eEndeavours.Link.WatchLustria": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vVyunkd81fwidcia]{Keep Watch (Lustria)}",
-    "WFRP4eEndeavours.Link.MapLustria": "Map the Route.",
-    "WFRP4eEndeavours.Link.PracticeLustria": "Practice a Skill.",
+    "WFRP4eEndeavours.Link.MapLustria": "Map the Route.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Start Mapping the Route}",
+    "WFRP4eEndeavours.Link.PracticeLustria": "Practice a Skill.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.u8TqLX1IVl0RJnMX]{Practice a Skill (Lustria)}",
     "WFRP4eEndeavours.Link.CampLustria": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8m5LbpBAEO6PFrzD]{Make Camp (Lustria)}",
     "WFRP4eEndeavours.Link.Boat": "Repair a Boat.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kgbyWNs5nzPmSKZn]{Repair a Boat}",
     "WFRP4eEndeavours.Link.Skaven": "A Study in Skaven.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.l7fyh2Jdu81QVC3w]{A Study in Skaven}",
@@ -234,11 +234,13 @@
     "WFRP4eEndeavours.Title.DissentGossip": "Foment Dissent (Gossip)",
     "WFRP4eEndeavours.Title.Combat": "Combat Training",
     "WFRP4eEndeavours.Title.News": "The Latest News",
+    "WFRP4eEndeavours.Title.Reputation": "Reputation",
     "WFRP4eEndeavours.Title.Research": "Research Lore",
     "WFRP4eEndeavours.Title.Mark": "Study a Mark",
     "WFRP4eEndeavours.Title.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Title.Forage": "Forage",
     "WFRP4eEndeavours.Title.Information": "Gather Information",
+    "WFRP4eEndeavours.Title.Practice": "Practice a Skill",
     "WFRP4eEndeavours.Title.Watch": "Keep Watch",
     "WFRP4eEndeavours.Title.MapRoute": "Map the Route",
     "WFRP4eEndeavours.Title.CampRest": "Make Camp (Rest)",
@@ -300,11 +302,13 @@
     "WFRP4eEndeavours.Failure.DissentGossip": "<p>You can't find enough information.</p>",
     "WFRP4eEndeavours.Failure.Combat": "<p>You must train harder.</p>",
     "WFRP4eEndeavours.Failure.News": "<p>Nothing of interest this time.</p>",
+	"WFRP4eEndeavours.Failure.Reputation": "<p>You've wasted your money, or worse.</p>",
     "WFRP4eEndeavours.Failure.Research": "<p>You don't find useful or accurate information.</p>",
     "WFRP4eEndeavours.Failure.Mark": "<p>You don't find anything useful about your mark.</p>",
     "WFRP4eEndeavours.Failure.Woodcraft": "<p>The poor shelter you create won't save your group from this inclement weather. You'll have to Test for @UUID[JournalEntry.NS3YGlJQxwTggjRX.JournalEntryPage.WCivInLZrqEtZzF4#exposure]{Exposure}.</p>",
     "WFRP4eEndeavours.Failure.Forage": "<p>You search and search, but find nothing.</p>",
     "WFRP4eEndeavours.Failure.Information": "<p>Nobody is willing to tell you anything.</p>",
+    "WFRP4eEndeavours.Failure.Practice": "<p>You need more practice.</p>",
     "WFRP4eEndeavours.Failure.Watch": "<p>Pretty sure nobody is behind those bushes...</p>",
     "WFRP4eEndeavours.Failure.Camp": "<p>The camp isn't really so impressive...</p>",
     "WFRP4eEndeavours.Failure.College": "<p>You must study harder.</p>",
@@ -333,7 +337,8 @@
     "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
-    "WFRP4eEndeavours.Failure.BlackMarket": "<p>Nothing of interest in the black market this time.</p>",
+    "WFRP4eEndeavours.Failure.BlackMarketBuy": "<p>Nothing of interest in the black market this time.</p>",
+    "WFRP4eEndeavours.Failure.BlackMarketSell": "<p>Nobody is interested.</p>",
     "WFRP4eEndeavours.Failure.Gambling": "<p>This isn't your lucky day!</p>",
     "WFRP4eEndeavours.Failure.Identities": "<p>You need more practice.</p>",
     "WFRP4eEndeavours.Failure.Whisper": "<p>People think your rumours are false.</p>",
@@ -363,11 +368,13 @@
     "WFRP4eEndeavours.Success.DissentGossip": "<p>You are ready to start talking to the masses.</p>",
     "WFRP4eEndeavours.Success.Combat": "<p>You may reverse a Test with the associated Skill once during your next adventure.</p>",
     "WFRP4eEndeavours.Success.News": "<p>You hear some interesting rumours.</p>",
+    "WFRP4eEndeavours.Success.Reputation": "<p>You spread your wealth wisely.</p>",
     "WFRP4eEndeavours.Success.Research": "<p>You find useful information.</p>",
     "WFRP4eEndeavours.Success.Mark": "<p>You discover something useful about your mark.</p>",
     "WFRP4eEndeavours.Success.Woodcraft": "<p>You and your companions do not need to Test for Exposure due to inclement weather.</p>",
     "WFRP4eEndeavours.Success.Forage": "<p>You found what you were searching for.</p>",
     "WFRP4eEndeavours.Success.Information": "<p>You hear some interesting rumours.</p>",
+    "WFRP4eEndeavours.Success.Practice": "<p>You may reverse a Test using {skill} once during the following adventure, or any subsequent Stages of travel.</p>",
     "WFRP4eEndeavours.Success.Watch": "<p>Nobody will surprise you in your watch!</p>",
     "WFRP4eEndeavours.Success.CampRest": "<p>This comfortable camp allows you to reduce Fatigued conditions from a character.</p>",
     "WFRP4eEndeavours.Success.CampHeal": "<p>This comfortable camp allows you to heal a character.</p>",
@@ -396,7 +403,8 @@
     "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
-    "WFRP4eEndeavours.Success.BlackMarket": "<p>A profitable day at the black market.</p>",
+    "WFRP4eEndeavours.Success.BlackMarketBuy": "<p>The black market has exactly what you need.</p>",
+    "WFRP4eEndeavours.Success.BlackMarketSell": "<p>A profitable day at the black market.</p>",
     "WFRP4eEndeavours.Success.Gambling": "<p>This is your lucky day!</p>",
     "WFRP4eEndeavours.Success.Identities": "<p>You're getting into your character in-depth. You may count as having the @UUID[Compendium.wfrp4e-core.items.Item.PJ4oxDExnuFNr2Fi]{Secret Identity} Talent for the next adventure.</p>",
     "WFRP4eEndeavours.Success.Whisper": "<p>The campaign was a success.</p>",
@@ -424,6 +432,7 @@
     "WFRP4eEndeavours.Notification.NoTraining": "You can't train animals!",
     "WFRP4eEndeavours.Notification.NoResearch": "You can't read or write!",
     "WFRP4eEndeavours.Notification.NoSkill": "You don't have the right skill!",
+    "WFRP4eEndeavours.Notification.NoCareerSkill": "Career skill not found!",
     "WFRP4eEndeavours.Notification.NoTrade": "You don't have any Trade skill!",
     "WFRP4eEndeavours.Notification.NoHeal": "You can't heal!",
     "WFRP4eEndeavours.Notification.NoWeapon": "You don't have any weapon!",
@@ -432,6 +441,7 @@
     "WFRP4eEndeavours.Notification.CreatedTest": "Created Extended Test: {name}",
     "WFRP4eEndeavours.Animal.ChooseSkill": "Choose a Training Skill.",
     "WFRP4eEndeavours.Combat.ChooseSkill": "Choose a Training Skill.",
+    "WFRP4eEndeavours.Practice.ChooseSkill": "Choose a Skill to practice.",
     "WFRP4eEndeavours.Camp.Choose": "The camp will be used to Heal or Rest?",
     "WFRP4eEndeavours.UnusualWeapon.ChooseSkill": "Which weapon do you want to master?",
     "WFRP4eEndeavours.Research.Choose": "Do you want to use your Skill or your Intelligence?",
@@ -483,6 +493,9 @@
     "WFRP4eEndeavours.Income.Earned": "You earned ",
     "WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
 
+	"WFRP4eEndeavours.BlackMarket.Choose": "Do you want to buy or to sell?",
+	"WFRP4eEndeavours.BlackMarket.Buy": "Buy",
+	"WFRP4eEndeavours.BlackMarket.Sell": "Sell",
     "WFRP4eEndeavours.Gaol.Held": "Prisoner is being held...",
     "WFRP4eEndeavours.Gaol.Minor": "...in a cell at a watch post",
     "WFRP4eEndeavours.Gaol.Moderate": "...for Moderate Crimes",
