--- a/lang/es.json
+++ b/lang/es.json
@@ -148,7 +148,7 @@
     "WFRP4eEndeavours.Link.Combat": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.517cQPn5p1bkRUgu]{Entrenamiento en combate}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RJvdnVN7IZU2NqG1]{Entrenamiento en combate}",
     "WFRP4eEndeavours.Link.Dissent": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.RHsuOsC5DpoD4bkR]{Fomentar la discordia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.WNTHJ26Ri47PNbpy]{Fomentar la discordia}",
     "WFRP4eEndeavours.Link.News": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.Ujg3N2RiGC4RNSvH]{\u00DAltimas noticias}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.1BH6KfEaP7bFsbTn]{\u00DAltimas noticias}",
-    "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputaci\u00F3n}.",
+    "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputaci\u00F3n}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vRL5isWEUYHYnDLg]{Reputaci\u00F3n}",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Investigar un saber}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Investigar un saber}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Estudiar a una v\u00EDctima}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Estudiar a una v\u00EDctima}",
     "WFRP4eEndeavours.Link.Woodcraft": "Conocimiento del bosque.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Conocimiento del bosque}",
@@ -156,7 +156,7 @@
     "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
     "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
     "WFRP4eEndeavours.Link.MapRoute": "Trazar la ruta.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Comenzar a trazar la ruta}",
-    "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
+    "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.rxXm0CRRxbTLlgpN]{Practicar una habilidad}",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
     "WFRP4eEndeavours.Link.College": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.4k9zO8G9Ay17d6mE]{Investigaci\u00F3n en Colegio}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
@@ -188,8 +188,8 @@
     "WFRP4eEndeavours.Link.Shelter": "Encontrar refugio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.bIXQJZBEaL5iziDm]{Encontrar refugio}",
     "WFRP4eEndeavours.Link.ForageforFood": "Forrajear comida.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.uwUjherl2lz7eQzJ]{Forrajear comida}",
     "WFRP4eEndeavours.Link.WatchLustria": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.vVyunkd81fwidcia]{Montar guardia (Lustria)}",
-    "WFRP4eEndeavours.Link.MapLustria": "Trazar la ruta.",
-    "WFRP4eEndeavours.Link.PracticeLustria": "Practicar una habilidad.",
+    "WFRP4eEndeavours.Link.MapLustria": "Trazar la ruta.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Comenzar a trazar la ruta}",
+    "WFRP4eEndeavours.Link.PracticeLustria": "Practicar una habilidad.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.u8TqLX1IVl0RJnMX]{Practicar una habilidad}",
     "WFRP4eEndeavours.Link.CampLustria": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.8m5LbpBAEO6PFrzD]{Acampar (Lustria)}",
     "WFRP4eEndeavours.Link.Boat": "Reparar un barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kgbyWNs5nzPmSKZn]{Reparar un barco}",
     "WFRP4eEndeavours.Link.Skaven": "Estudio en skaven.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.l7fyh2Jdu81QVC3w]{Estudio en skaven}",
@@ -234,11 +234,13 @@
     "WFRP4eEndeavours.Title.DissentGossip": "Fomentar la discordia (Cotilleo)",
     "WFRP4eEndeavours.Title.Combat": "Entrenamiento en combate",
     "WFRP4eEndeavours.Title.News": "\u00DAltimas noticias",
+    "WFRP4eEndeavours.Title.Reputation": "Reputaci\u00F3n",
     "WFRP4eEndeavours.Title.Research": "Investigar un Saber",
     "WFRP4eEndeavours.Title.Mark": "Estudiar a una v\u00EDctima",
     "WFRP4eEndeavours.Title.Woodcraft": "Conocimiento del bosque",
     "WFRP4eEndeavours.Title.Forage": "Forrajear",
     "WFRP4eEndeavours.Title.Information": "Recopilar informaci\u00F3n",
+    "WFRP4eEndeavours.Title.Practice": "Practicar una habilidad",
     "WFRP4eEndeavours.Title.Watch": "Montar guardia",
     "WFRP4eEndeavours.Title.MapRoute": "Trazar la ruta",
     "WFRP4eEndeavours.Title.CampRest": "Acampar (Descansar)",
@@ -300,11 +302,13 @@
     "WFRP4eEndeavours.Failure.DissentGossip": "<p>No consigues encontrar suficiente informaci\u00F3n.</p>",
     "WFRP4eEndeavours.Failure.Combat": "<p>Debes entrenar m\u00E1s.</p>",
 	"WFRP4eEndeavours.Failure.News": "<p>Nada de inter\u00E9s esta vez.</p>",
+	"WFRP4eEndeavours.Failure.Reputation": "<p>Has malgastado el dinero, o peor.</p>",
     "WFRP4eEndeavours.Failure.Research": "<p>No encuentras informaci\u00F3n \u00FAtil o veraz.</p>",
     "WFRP4eEndeavours.Failure.Mark": "<p>No encuentras nada \u00FAtil sobre tu v\u00EDctima.</p>",
     "WFRP4eEndeavours.Failure.Woodcraft": "<p>Este pobre refugio no salvar\u00E1 a tu grupo de las inclemencias del tiempo. Son necesarios Chequeos por @UUID[JournalEntry.NS3YGlJQxwTggjRX.JournalEntryPage.WCivInLZrqEtZzF4#exposicion-a-la-intemperie]{Exposici\u00F3n a la intemperie}.</p>",
     "WFRP4eEndeavours.Failure.Forage": "<p>Buscas y buscas, pero no encuentras nada.</p>",
     "WFRP4eEndeavours.Failure.Information": "<p>Nadie est\u00E1 dispuesto a contarte nada.</p>",
+    "WFRP4eEndeavours.Failure.Practice": "<p>Necesitas m\u00E1s pr\u00E1ctica.</p>",
     "WFRP4eEndeavours.Failure.Watch": "<p>Seguro que no hay nadie tras esos arbustos...</p>",
     "WFRP4eEndeavours.Failure.Camp": "<p>El campamento no es nada impresionante...</p>",
     "WFRP4eEndeavours.Failure.College": "<p>Debes estudiar m\u00E1s.</p>",
@@ -333,7 +337,8 @@
     "WFRP4eEndeavours.Failure.Null": "<p>Algo del Rasgo de Wilhelm Nulidad se te ha pegado.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn es golpeada por una terrible revelaci\u00F3n sobre ti, la cual se niega en redondo a compartir contigo.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>No aprendes nada nuevo de Ulricsson.</p>",
-    "WFRP4eEndeavours.Failure.BlackMarket": "<p>Nada de inter\u00E9s en el mercado negro esta vez.</p>",
+    "WFRP4eEndeavours.Failure.BlackMarketBuy": "<p>Nada de inter\u00E9s en el mercado negro esta vez.</p>",
+    "WFRP4eEndeavours.Failure.BlackMarketSell": "<p>Nadie est\u00E1 interesado.</p>",
     "WFRP4eEndeavours.Failure.Gambling": "<p>\u00A1Es tu d\u00EDa de suerte!</p>",
     "WFRP4eEndeavours.Failure.Identities": "<p>Necesitas practicar m\u00E1s.</p>",
     "WFRP4eEndeavours.Failure.Whisper": "<p>La gente cree que tus rumores son falsos.</p>",
@@ -363,11 +368,13 @@
     "WFRP4eEndeavours.Success.DissentGossip": "<p>Est\u00E1s preparado para hablarle a las masas.</p>",
     "WFRP4eEndeavours.Success.Combat": "<p>Podr\u00E1s invertir los dados en un Chequeo llevado a cabo con la Habilidad asociada una vez durante la siguiente aventura.</p>",
     "WFRP4eEndeavours.Success.News": "<p>Escuchas algunos rumores interesantes.</p>",
+    "WFRP4eEndeavours.Success.Reputation": "<p>Repartes tus riquezas sabiamente.</p>",
     "WFRP4eEndeavours.Success.Research": "<p>Encuentras informaci\u00F3n de utilidad.</p>",
     "WFRP4eEndeavours.Success.Mark": "<p>Descubres algo \u00FAtil sobre tu v\u00EDctima.</p>",
     "WFRP4eEndeavours.Success.Woodcraft": "<p>Tus compa\u00F1eros y t\u00FA no necesit\u00E1is Chequear por Exposici\u00F3n debido a las inclemencias del tiempo.</p>",
     "WFRP4eEndeavours.Success.Forage": "<p>Encuentras lo que andabas buscando.</p>",
     "WFRP4eEndeavours.Success.Information": "<p>Escuchas algunos rumores interesantes.</p>",
+    "WFRP4eEndeavours.Success.Practice": "<p>Podr\u00E1s invertir los dados en un Chequeo de {skill} una vez durante la siguiente aventura, o cualquier etapa posterior del viaje.</p>",
     "WFRP4eEndeavours.Success.Watch": "<p>\u00A1Nadie os sorprender\u00E1 durante tu guardia!</p>",
     "WFRP4eEndeavours.Success.CampRest": "<p>Este c\u00F3modo campamento os permite reducir los estados de Fatigado de un personaje.</p>",
     "WFRP4eEndeavours.Success.CampHeal": "<p>Este c\u00F3modo campamento os permite sanar a un personaje.</p>",
@@ -396,7 +403,8 @@
     "WFRP4eEndeavours.Success.Null": "<p>Todo va bien... de momento.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn atisba un retazo de tu futuro inmediato.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Las lecciones de Ulricsson te ense\u00F1an m\u00E1s sobre la vida de Sigmar, \u00BFpero quiz\u00E1 es una herej\u00EDa?</p>",
-    "WFRP4eEndeavours.Success.BlackMarket": "<p>Un d\u00EDa productivo en el marcado negro.</p>",
+    "WFRP4eEndeavours.Success.BlackMarketBuy": "<p>El mercado negro tiene exactamente lo que necesitas.</p>",
+    "WFRP4eEndeavours.Success.BlackMarketSell": "<p>Un d\u00EDa productivo en el mercado negro.</p>",
     "WFRP4eEndeavours.Success.Gambling": "<p>\u00A1Hoy no es tu d\u00EDa de suerte!</p>",
     "WFRP4eEndeavours.Success.Identities": "<p>Te metes en el papel hasta el fondo. Puede que cuentes como si tuvieras el talento @UUID[Compendium.wfrp4e-core.items.Item.PJ4oxDExnuFNr2Fi]{Identidad secreta} durante la siguiente aventura.</p>",
     "WFRP4eEndeavours.Success.Whisper": "<p>La campa\u00F1a ha sido un \u00E9xito.</p>",
@@ -424,6 +432,7 @@
     "WFRP4eEndeavours.Notification.NoTraining": "\u00A1No sabes adiestrar animales!",
     "WFRP4eEndeavours.Notification.NoResearch": "\u00A1Necesitas saber leer y escribir!",
     "WFRP4eEndeavours.Notification.NoSkill": "\u00A1No tienes ninguna habilidad adecuada!",
+    "WFRP4eEndeavours.Notification.NoCareerSkill": "\u00A1Habilidad de Carrera no encontrada!",
     "WFRP4eEndeavours.Notification.NoTrade": "\u00A1No tienes ninguna habilidad de Oficio!",
     "WFRP4eEndeavours.Notification.NoHeal": "\u00A1No sabes sanar!",
     "WFRP4eEndeavours.Notification.NoWeapon": "\u00A1No tienes ning\u00FAn arma!",
@@ -432,6 +441,7 @@
     "WFRP4eEndeavours.Notification.CreatedTest": "Creado chequeo prolongado: {name}",
     "WFRP4eEndeavours.Animal.ChooseSkill": "Escoge una habilidad para adiestrar",
     "WFRP4eEndeavours.Combat.ChooseSkill": "Escoge una habilidad para entrenar",
+    "WFRP4eEndeavours.Practice.ChooseSkill": "Escoge una habilidad para practicar",
     "WFRP4eEndeavours.Camp.Choose": "\u00BFEl campamento ser\u00E1 usado para Sanar o Descansar?",
     "WFRP4eEndeavours.UnusualWeapon.ChooseSkill": "\u00BFQu\u00E9 arma quieres dominar?",
     "WFRP4eEndeavours.Research.Choose": "\u00BFQuieres usar tu Habilidad o tu Inteligencia?",
@@ -483,6 +493,9 @@
     "WFRP4eEndeavours.Income.Earned": "Has ganado ",
     "WFRP4eEndeavours.Income.Fumble": "No has ganado nada en absoluto.",
 
+	"WFRP4eEndeavours.BlackMarket.Choose": "\u00BFQuieres comprar o vender?",
+	"WFRP4eEndeavours.BlackMarket.Buy": "Comprar",
+	"WFRP4eEndeavours.BlackMarket.Sell": "Vender",
     "WFRP4eEndeavours.Gaol.Held": "El prisionero est\u00E1 encerrado...",
     "WFRP4eEndeavours.Gaol.Minor": "...en un calabozo de la guardia",
     "WFRP4eEndeavours.Gaol.Moderate": "...por cr\u00EDmenes moderados",
