--- a/lang/en.json
+++ b/lang/en.json
@@ -9,8 +9,8 @@
     "settings.soc.hint": "Replace all between adventures endeavours with the ones listed in Sea of Claws. If Up in Arms Endeavours is enabled, the available ones will be added",
     "settings.lustria.name": "Lustria Endeavours",
     "settings.lustria.hint": "Adds the Lustrian between adventures endeavours and replace all travel endeavours with the ones listed in Lustria.",
-    "settings.dwarf.name": "Dwarf Player's Guide Endeavour",
-    "settings.dwarf.hint": "Adds the Forge Rune endeavour included in Dwarf Player's Guide.",
+    "settings.dwarf.name": "Dwarfen Endeavours",
+    "settings.dwarf.hint": "Adds the Dwarfen between adventures endeavours and replace all travel endeavours with the delving endeavours (Dwarf Player's Guide & Lords of Stone and Steel).",
     "settings.criminal.name": "Criminal Endeavours (Deft Steps Light Fingers)",
     "settings.criminal.hint": "Adds the criminal endeavours included in Deft Steps Light Fingers.",
     "settings.organizedcrime.name": "Organized Crime Endeavours (Deft Steps Light Fingers)",
@@ -95,7 +95,6 @@
     "WFRP4eEndeavours.BA.Hedge": "Hedge School",
     "WFRP4eEndeavours.BA.Visionaries": "No Use for Visionaries",
     "WFRP4eEndeavours.BA.Witness": "Bear Witness",
-    "WFRP4eEndeavours.BA.ForgeRune": "Forge Rune",
     "WFRP4eEndeavours.BA.BlackMarket": "Black Market",
     "WFRP4eEndeavours.BA.Gambling": "Gambling Den",
     "WFRP4eEndeavours.BA.Identities": "Plant Identities",
@@ -104,6 +103,14 @@
     "WFRP4eEndeavours.BA.Organising": "Organising Crime",
     "WFRP4eEndeavours.BA.Influence": "Maintain Influence",
     "WFRP4eEndeavours.BA.Gaol": "Gaol Break",
+    "WFRP4eEndeavours.BA.Underground": "Advance Underground",
+    "WFRP4eEndeavours.BA.Brew": "Brew Batch",
+    "WFRP4eEndeavours.BA.Drakefire": "Concoct Drakefire",
+    "WFRP4eEndeavours.BA.Archives": "Consult the Archives",
+    "WFRP4eEndeavours.BA.Trapping": "Customise a Trapping",
+    "WFRP4eEndeavours.BA.ForgeRune": "Forge Rune",
+    "WFRP4eEndeavours.BA.Oath": "Swear Oath",
+    "WFRP4eEndeavours.BA.Slayer": "Take the Slayer Oath",
 
     "WFRP4eEndeavours.Travel.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Travel.Forage": "Forage",
@@ -134,6 +141,7 @@
     "WFRP4eEndeavours.Travel.Trap": "Trap (Camp)",
     "WFRP4eEndeavours.Travel.WatchWilderness": "Watch (Camp)",
     "WFRP4eEndeavours.Travel.WatchExtra": "Watch (Extra)",
+    "WFRP4eEndeavours.Travel.WaterDelving": "Find Water",
 
     "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Animal Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zWoIAiRiUEhgHwrE]{Animal Training}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Banking}.",
@@ -198,7 +206,6 @@
     "WFRP4eEndeavours.Link.Hedge": "Hedge School.",
     "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
-    "WFRP4eEndeavours.Link.ForgeRune": "Forge Rune.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.j8yh1Gr1iCbNG2K8]{Start Forging Rune}",
     "WFRP4eEndeavours.Link.BlackMarket": "Black Market.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.DMNmy5VByEVgCzCt]{Black Market}",
     "WFRP4eEndeavours.Link.Gambling": "Gambling Den.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Ij6oHBcYgdoGzNc8]{Gambling Den}",
     "WFRP4eEndeavours.Link.Identities": "Plant Identities.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dszrHUqkqFE1CTN8]{Plant Identities}",
@@ -225,6 +232,15 @@
     "WFRP4eEndeavours.Link.Trap": "Trap.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.D1YzPifCWEfWAxhx]{Trap}.</p>",
     "WFRP4eEndeavours.Link.WatchWilderness": "Watch.</b></h3><p>If you have any @Condition[Fatigued] Condition, you must roll to @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.eoHxUiW86aCSTmct]{stay awake}.",
     "WFRP4eEndeavours.Link.WatchExtra": "Watch (Extra).</b></h3><p>Try to @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.mprdlt9BxnUcKFg6]{stay awake}.</p>",
+    "WFRP4eEndeavours.Link.Underground": "Advance Underground.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.tuJFAy8wzrK1ojTb]{Start Advancing Underground}.</p>",
+    "WFRP4eEndeavours.Link.Brew": "Brew Batch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HtKTuxbmOnQwKKeT]{Start Brewing}.</p>",
+    "WFRP4eEndeavours.Link.Drakefire": "Concoct Drakefire.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.CFC67Jj7C9ef8oPu]{Concoct Drakefire}.</p>",
+    "WFRP4eEndeavours.Link.Archives": "Consult the Archives.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.T7U0MIudB7VHScNe]{Consult the Archives}.</p>",
+    "WFRP4eEndeavours.Link.Trapping": "Customise a Trapping.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HMg9eR3qVXf7QBbI]{Start Customizing an Item} or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.higJlkNZQMjwyHjh]{Repair Trapping}.</p>",
+    "WFRP4eEndeavours.Link.ForgeRune": "Forge Rune.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.j8yh1Gr1iCbNG2K8]{Start Forging Rune}",
+    "WFRP4eEndeavours.Link.Oath": "Swear Oath.",
+    "WFRP4eEndeavours.Link.Slayer": "Take the Slayer Oath.",
+    "WFRP4eEndeavours.Link.WaterDelving": "Find Water.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.18hYJdyqEJLRzWEn]{Find Water}.</p>",
 
     "WFRP4eEndeavours.Title.Animal": "Animal Training",
     "WFRP4eEndeavours.Title.Crafting": "Start Crafting",
@@ -271,7 +287,6 @@
     "WFRP4eEndeavours.Title.Null": "Resist Null",
     "WFRP4eEndeavours.Title.Visionaries": "Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": "Bear Witness",
-    "WFRP4eEndeavours.Title.ForgeRune": "Start Forging Rune",
     "WFRP4eEndeavours.Title.BlackMarket": "Black Market",
     "WFRP4eEndeavours.Title.Gambling": "Gambling Den",
     "WFRP4eEndeavours.Title.Identities": "Plant Identities",
@@ -294,6 +309,13 @@
     "WFRP4eEndeavours.Title.MakeCamp": "Make Camp",
     "WFRP4eEndeavours.Title.Trap": "Trap",
     "WFRP4eEndeavours.Title.WatchWilderness": "Stay Awake",
+    "WFRP4eEndeavours.Title.Underground": "Start Advancing Underground",
+    "WFRP4eEndeavours.Title.Brew": "Start Brewing",
+    "WFRP4eEndeavours.Title.Drakefire": "Concoct Drakefire",
+    "WFRP4eEndeavours.Title.Archives": "Consult the Archives",
+    "WFRP4eEndeavours.Title.Trapping": "Start Customizing Trapping",
+    "WFRP4eEndeavours.Title.Repair": "Repair Trapping",
+    "WFRP4eEndeavours.Title.ForgeRune": "Start Forging Rune",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Your animal needs more training.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
@@ -360,6 +382,8 @@
     "WFRP4eEndeavours.Failure.MakeCamp": "<p>Tonight you can't rest well.</p>",
     "WFRP4eEndeavours.Failure.Trap": "<p>Traps didn't work as they should.</p>",
     "WFRP4eEndeavours.Failure.WatchWilderness": "<p>You fall asleep.</p>",
+    "WFRP4eEndeavours.Failure.Drakefire": "<p>You just can't concoct drakefire, if it didn't explode.</p>",
+    "WFRP4eEndeavours.Failure.Repair": "<p>This trapping needs more work.</p>",
 
     "WFRP4eEndeavours.Success.Animal": "<p>Your animal learned a new trick! You can add a @UUID[Compendium.wfrp4e-core.items.Item.V0naR1YbYCl0KIxp]{Trained} Creature Trait.</p>",
     "WFRP4eEndeavours.Success.Expert": "<p>An expert has been located.</p>",
@@ -426,6 +450,8 @@
     "WFRP4eEndeavours.Success.MakeCamp": "<p>The ground is prepared for a restuful night's sleep.</p>",
     "WFRP4eEndeavours.Success.Trap": "<p>There is quarry in your traps!</p>",
     "WFRP4eEndeavours.Success.WatchWilderness": "<p>You keep watch the whole shift.</p>",
+    "WFRP4eEndeavours.Success.Drakefire": "<p>You produce enough drakefire for {shots} shots.</p>",
+    "WFRP4eEndeavours.Success.Repair": "<p>You are able to repair the trapping.</p>",
 
     "WFRP4eEndeavours.NoSubmit": "You must choose a Skill",
     "WFRP4eEndeavours.NoSubmitWeapon": "You must choose a Weapon",
@@ -441,6 +467,7 @@
     "WFRP4eEndeavours.Notification.CreatedTest": "Created Extended Test: {name}",
     "WFRP4eEndeavours.Animal.ChooseSkill": "Choose a Training Skill.",
     "WFRP4eEndeavours.Combat.ChooseSkill": "Choose a Training Skill.",
+    "WFRP4eEndeavours.Forage.ChooseSkill": "Choose a Skill to forage.",
     "WFRP4eEndeavours.Practice.ChooseSkill": "Choose a Skill to practice.",
     "WFRP4eEndeavours.Camp.Choose": "The camp will be used to Heal or Rest?",
     "WFRP4eEndeavours.UnusualWeapon.ChooseSkill": "Which weapon do you want to master?",
@@ -457,38 +484,52 @@
     "WFRP4eEndeavours.Map.ChooseSkill": "Choose a skill to create the map.",
     "WFRP4eEndeavours.Cook.ChooseSkill": "Choose a skill to cook.",
     "WFRP4eEndeavours.Journal.ChooseSkill": "Choose a skill to write your journal.",
+    "WFRP4eEndeavours.Drakefire.ChooseSkill": "Choose a skill to write your concoct.",
+    "WFRP4eEndeavours.Archives.ChooseSkill": "Choose a skill for the consult.",
+    "WFRP4eEndeavours.Repair.ChooseSkill": "Choose a skill to repair the trapping.",
 
+    "NAME.ArtDrawing":"Art (Drawing)",
+    "NAME.ArtWriting":"Art (Writing)",
+    "NAME.EntertainActing":"Entertain (Acting)",
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
     "NAME.EntertainStorytelling":"Entertain (Storytelling)",
-    "NAME.EntertainActing":"Entertain (Acting)",
-    "NAME.RangedBow":"Ranged (Bow)",
-    "NAME.TradeEngineering":"Trade (Engineering)",
-    "NAME.TradeCartographer":"Trade (Cartographer)",
-    "NAME.TradeCartography":"Trade (Cartography)",
-    "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
-    "NAME.TradeCarpenter":"Trade (Carpenter)",
-    "NAME.ReadWrite":"Read/Write",
+    "NAME.LoreHerbs":"Lore (Herbs)",
     "NAME.LoreTheology":"Lore (Theology)",
     "NAME.LoreSigmar":"Lore (Sigmar)",
+    "NAME.RangedBow":"Ranged (Bow)",
     "NAME.Runesmithing":"Runesmithing",
     "NAME.StealthRural":"Stealth (Rural)",
     "NAME.StealthUnderground":"Stealth (Underground)",
     "NAME.StealthUrban":"Stealth (Urban)",
-    "NAME.LoreHerbs":"Lore (Herbs)",
-    "NAME.ArtDrawing":"Art (Drawing)",
-    "NAME.TradeCooking":"Trade (Cooking)",
-    "NAME.ArtWriting":"Art (Writing)",
+    "NAME.TradeAlchemist":"Trade (Alchemist)",
+    "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
+    "NAME.TradeBrewer":"Trade (Brewer)",
+    "NAME.TradeCarpenter":"Trade (Carpenter)",
+    "NAME.TradeCartographer":"Trade (Cartographer)",
+    "NAME.TradeCartography":"Trade (Cartography)",
+    "NAME.TradeCook":"Trade (Cook)",
+    "NAME.TradeEngineer":"Trade (Engineer)",
+    "NAME.TradeEngineering":"Trade (Engineering)",
+    "NAME.ReadWrite":"Read/Write",
 
     "WFRP4eEndeavours.ItemName": "Item Name",
     "WFRP4eEndeavours.Crafting": "Crafting: ",
     "WFRP4eEndeavours.TargetSL": "Target SL",
     "WFRP4eEndeavours.InitialSL": "Initial SL",
     "WFRP4eEndeavours.InitialSLTooltip": "If comes from an Invent! endeavour",
-	
+
     "WFRP4eEndeavours.RuneName": "Rune Name",
     "WFRP4eEndeavours.RuneType": "Rune Type",
     "WFRP4eEndeavours.Forging": "Forging: ",
     "WFRP4eEndeavours.Master": "Master",
+
+    "WFRP4eEndeavours.TunnelName": "Tunnel Name",
+    "WFRP4eEndeavours.Underground": "Advance Underground: ",
+
+    "WFRP4eEndeavours.BatchName": "Batch Name",
+    "WFRP4eEndeavours.Brew": "Brew: ",
+
+    "WFRP4eEndeavours.Trapping": "Customizing: ",
 
     "WFRP4eEndeavours.Income.Earned": "You earned ",
     "WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
